--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "perxelity-client",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,17 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
-    "@telegram-apps/sdk-react": "^1.0.0",
     "@twa-dev/sdk": "^8.0.2",
     "autoprefixer": "^10.4.17",
+    "katex": "^0.16.8",
     "lz-string": "^1.5.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^6.0.3",
+    "remark-math": "^5.1.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
